<resources>
    // main screen
    <string name="screen_main_title">Playlist Maker</string>
    <string name="screen_main_button_search_title">Поиск</string>
    <string name="screen_main_button_media_library">Медиатека</string>
    <string name="screen_main_button_settings">Настройки</string>

    // settings screen
    <string name="screen_settings_title">Настройки</string>
    <string name="screen_settings_dark_theme_title">Темная тема</string>
    <string name="screen_settings_share_title">Поделиться приложением</string>
    <string name="screen_settings_support_title">Написать в поддержку</string>
    <string name="screen_settings_user_agreement_title">Пользовательское соглашение</string>
    <string name="user_email_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="user_email_description">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_email">alzadiraka@ya.ru</string>
    <string name="course_link">https://practicum.yandex.kz/profile/android-developer-plus/</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>

    // search screen
    <string name="screen_search_title">Поиск</string>
    <string name="screen_search_input_hint">Поиск</string>
    <string name="screen_search_error_empty_response">Ничего не нашлось</string>
    <string name="screen_search_error_no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="screen_search_button_reload">Обновить</string>
    <string name="screen_search_history_title">Вы искали</string>
    <string name="screen_search_button_clean_history">Очистить историю</string>

    // player screen
    <string name="screen_player_track_length">Длительность</string>
    <string name="screen_player_track_album">Альбом</string>
    <string name="screen_player_track_year">Год</string>
    <string name="screen_player_track_genre">Жанр</string>
    <string name="screen_player_track_country">Страна</string>
    <string name="screen_player_title">Аудиоплеер</string>
    <string name="screen_player_add_to_playlist_title">Добавить в плейлист</string>
    <string name="screen_player_track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="screen_player_track_already_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="screen_player_track_add_error">Не удалось добавить трек в плейлист</string>
    <string name="playback_notification_channel_name">Воспроизведение трека</string>
    <string name="playback_notification_track_info">%1$s - %2$s</string>

    // media library screen
    <string name="screen_media_library_title">Медиатека</string>
    <string name="screen_media_library_favorite_tracks_tab_title">Избранные треки</string>
    <string name="screen_media_library_playlists_tab_title">Плейлисты</string>
    <string name="screen_media_library_empty_tracks_response">Ваша медиатека пуста</string>
    <string name="screen_media_library_empty_playlist_response">Вы не создали\n ни одного плейлиста</string>
    <string name="screen_media_library_new_playlist_button">Новый плейлист</string>

    // playlist screen
    <string name="screen_playlist_title">Плейлист</string>
    <string name="screen_playlist_duration_and_tracks">%1$s • %2$s</string>
    <plurals name="screen_playlist_duration_minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <plurals name="screen_playlist_tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <string name="screen_playlist_tracks_empty">В этом плейлисте нет треков</string>
    <string name="screen_playlist_remove_track_dialog_message">Хотите удалить трек?</string>
    <string name="screen_playlist_remove_track_dialog_negative">Нет</string>
    <string name="screen_playlist_remove_track_dialog_positive">Да</string>
    <string name="screen_playlist_share_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="screen_playlist_share_tracks_count">%d треков</string>
    <string name="screen_playlist_menu_share">Поделиться</string>
    <string name="screen_playlist_menu_edit">Редактировать информацию</string>
    <string name="screen_playlist_menu_delete">Удалить плейлист</string>
    <string name="screen_playlist_delete_dialog_message">Хотите удалить плейлист «%1$s»?</string>

    // new playlist screen
    <string name="new_playlist_create_button">Создать</string>
    <string name="new_playlist_description">Описание</string>
    <string name="new_playlist_name">Название*</string>
    <string name="new_playlist_screen_title">Новый плейлист</string>
    <string name="new_playlist_created_toast">Плейлист %1$s создан</string>
    <string name="new_playlist_creation_error">Не удалось создать плейлист</string>
    <string name="new_playlist_exit_dialog_title">Завершить создание плейлиста?</string>
    <string name="new_playlist_exit_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="new_playlist_exit_dialog_cancel">Отмена</string>
    <string name="new_playlist_exit_dialog_finish">Завершить</string>

    // edit playlist screen
    <string name="edit_playlist_screen_title">Редактировать</string>
    <string name="edit_playlist_save_button">Сохранить</string>
</resources>