<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_navigation_graph"
    app:startDestination="@id/mediaLibraryFragment">

    <fragment
        android:id="@+id/mediaLibraryFragment"
        android:name="com.playlistmaker.medialibrary.ui.MediaLibraryFragment"
        android:label="@string/screen_media_library_title">

        <action
            android:id="@+id/action_mediaLibraryFragment_to_playerFragment"
            app:destination="@id/playerFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_mediaLibraryFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />

    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.playlistmaker.search.ui.SearchFragment"
        android:label="@string/screen_search_title">

        <action
            android:id="@+id/action_searchFragment_to_playerFragment"
            app:destination="@id/playerFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.playlistmaker.settings.ui.SettingsFragment"
        android:label="@string/screen_settings_title" />

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.playlistmaker.player.ui.PlayerFragment"
        android:label="@string/screen_player_title">

        <action
            android:id="@+id/action_playerFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />

    </fragment>

    <fragment
        android:id="@+id/createPlaylistFragment"
        android:name="com.playlistmaker.playlist.ui.CreatePlaylistFragment"
        android:label="@string/new_playlist_screen_title" />

</navigation>