<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_blue"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:text="@string/screen_main_title"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:letterSpacing="0"
        android:text="@string/screen_main_button_search_title"
        android:textAllCaps="false"
        android:textColor="@color/yp_black"
        android:textSize="22sp"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_search_magnifier"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/yp_black" />

    <Button
        android:id="@+id/button_media_library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:letterSpacing="0"
        android:text="@string/screen_main_button_media_library"
        android:textAllCaps="false"
        android:textColor="@color/yp_black"
        android:textSize="22sp"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_media_library"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/yp_black" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:letterSpacing="0"
        android:text="@string/screen_main_button_settings"
        android:textAllCaps="false"
        android:textColor="@color/yp_black"
        android:textSize="22sp"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/yp_black" />
</LinearLayout>