<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:scaleType="center"
            android:src="@drawable/ic_back_arrow_24"
            app:tint="?attr/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/screen_settings_title"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/primary_text_size" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="24dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:text="@string/screen_settings_dark_theme_title"
            style="@style/TextStyleSettingsOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:layout_marginEnd="@dimen/big_padding"
            app:thumbTint="@color/switch_thumb"
            app:trackTint="@color/switch_track"
            android:minWidth="0dp"
            android:minHeight="0dp"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/button_share_app"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_settings_share_title"
            style="@style/TextStyleSettingsOptions"/>

        <ImageView
            style="@style/IconStyleSettingsOptions"
            android:src="@drawable/ic_share_24" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/button_support"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_settings_support_title"
            style="@style/TextStyleSettingsOptions"/>

        <ImageView
            style="@style/IconStyleSettingsOptions"
            android:src="@drawable/ic_support_24" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/button_user_agreement"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_settings_user_agreement_title"
            style="@style/TextStyleSettingsOptions" />

        <ImageView
            style="@style/IconStyleSettingsOptions"
            android:src="@drawable/ic_shevron_24" />
    </FrameLayout>
</LinearLayout>