<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:background="@null"
            android:scaleType="center"
            android:src="@drawable/ic_back_arrow_24"
            app:tint="?attr/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/screen_search_title"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/primary_text_size" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/search_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginTop="@dimen/medium_padding"
        android:layout_marginEnd="@dimen/big_padding">

        <EditText
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/bg_search_input"
            android:drawableStart="@drawable/ic_search_magnifier_14"
            android:drawablePadding="12dp"
            android:drawableTint="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center_vertical"
            android:hint="@string/screen_search_input_hint"
            android:imeOptions="actionDone"
            android:includeFontPadding="false"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="48dp"
            android:singleLine="true"
            android:textColor="@color/yp_black"
            android:textColorHint="@color/yp_text_grey" />

        <ImageView
            android:id="@+id/clear_cross_icon"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:backgroundTint="?attr/colorOnSecondaryContainer"
            android:src="@drawable/ic_cross_button_16"
            android:visibility="gone"
            app:tint="?attr/colorOnPrimary" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/placeholderContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracksRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/errorImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="102dp"
            android:textAlignment="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/placeholderMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/big_padding"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="19sp" />

        <Button
            android:id="@+id/buttonRetry"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:backgroundTint="?attr/colorPrimary"
            android:fontFamily="@font/ys_display_medium"
            android:fontWeight="500"
            android:letterSpacing="0"
            android:text="@string/screen_search_button_reload"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimaryFixed"
            android:textSize="14sp"
            android:visibility="gone"
            app:cornerRadius="54dp" />
    </LinearLayout>
</LinearLayout>